# tflite-esp-template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  LICENSE.md  README.md  requirements.txt
.github/workflows/: cmake.yml
components/sources/: README.md
img/: README.md  nn_diagram.drawio  schema_deployment_simplified.drawio  schema_pipeline.drawio
main/: CMakeLists.txt  README.md
main/inc/: DataProvider.h  FeatureProvider.h  PredictionHandler.h  PredictionInterpreter.h  TrainDataRecorder.h  micro_model.h
main/src/: DataProvider.cpp  FeatureProvider.cpp  PredictionHandler.cpp  PredictionInterpreter.cpp  main.cpp  main_functions.cpp  micro_model.cpp
model_creation/: README.md  convert.ipynb  model.ipynb  preprocess.ipynb  requirements.txt
scripts/: README.md  run_dev_tools.sh  set_micro_model.sh  update_components.sh
